# flexmalloc

./: Makefile.am  configure.ac  flexmalloc.pc.in
scripts/: Makefile.am  flexmalloc.sh.in
src/: Makefile.am  allocator-h2m.cxx  allocator-h2m.hxx  allocator-memkind-hbwmalloc.cxx  allocator-memkind-pmem.cxx  allocator-memkind-pmem.hxx  allocator-posix.cxx  allocator.cxx  allocator.hxx  allocators.cxx  allocators.hxx  code-locations.cxx  code-locations.hxx  statistics-recorder-allocator.hxx
tests/: Makefile.am  base-memory-configuration  h2m-malloc+free-locations  h2m-malloc+free.c  libtester.h
